[project]
name = "zm03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Taniguchi Fuga", email = "sw23833q@st.omu.ac.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
]

[project.scripts]
zm03 = "zm03.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"